# projetoAnimalsCare-main/src/model/dto/calendarioDto.ts
@@ -1,11 +1,13 @@
-export class CalendarioDto {
-    dataVacinacao: string;
-    tipoVacina: string;
+export class CalendarioDto{
+    data: string;
+    tipoCompromisso: string;
     hora: string;
+    observacao: string;
 
-    constructor(dataVacinacao: string, tipoVacina: string, hora: string) {
-        this.dataVacinacao = dataVacinacao;
-        this.tipoVacina = tipoVacina;
+    constructor(data: any, tipoCompromisso: any, hora: any, observacao: any){
         this.hora = hora;
+        this.tipoCompromisso = tipoCompromisso;
+        this.data = data;
+        this.observacao = observacao;
     }
 }
