# projetoAnimalsCare-main/src/model/dto/petRequestDto.ts
@@ -1,5 +1,5 @@
-export class PetRequestDto {
-    id: number;
+export class PetRequestDto{
+    idResponsavel: number;
     nome: string;
     especie: string;
     raca: string;
@@ -7,13 +7,14 @@ export class PetRequestDto {
     idade: number;
     peso: number;
 
-    constructor(id?: number, nome?: string, especie?: string, raca?: string, genero?: string, idade?: number, peso?: number) {
-        this.id = id || 0;
+    constructor(idResponsavel?: number, nome?:string, especie?:string, raca?: string, genero?: string, idade?: number, peso?: number){
+        this.idResponsavel = idResponsavel || 0;
         this.nome = nome || '';
         this.especie = especie || '';
         this.raca = raca || '';
         this.genero = genero || '';
         this.idade = idade || 0;
         this.peso = peso || 0;
-    }
+
+        }
 }
