# projetoAnimalsCare-main/src/model/entity/petEntity.ts
@@ -1,5 +1,6 @@
 export class Pet{
     id: number;
+    idResponsavel: number;
     nome: string;
     especie: string;
     raca: string;
@@ -7,9 +8,10 @@ export class Pet{
     idade: number;
     peso: number;
 
-    constructor(id?:number, nome?:string, especie?:string, raca?: string, genero?:string, idade?: number, peso?: number){
-        this.validatesInformation(nome, especie, raca, genero, idade, peso);
+    constructor(id?:number, idResponsavel?: number, nome?:string, especie?:string, raca?: string, genero?:string, idade?: number, peso?: number){
+        this.validatesInformation(idResponsavel, nome, especie, raca, genero, idade, peso);
         this. id = id || 0;
+        this.idResponsavel = idResponsavel || 0;
         this.nome = nome || '';
         this.especie = especie || '';
         this.raca = raca || '';
@@ -19,9 +21,9 @@ export class Pet{
 
         }
 
-        private validatesInformation(nome:any, especie:any, raca:any, genero: any, idade:any, peso:any){
+        private validatesInformation(idResponsavel: any, nome:any, especie:any, raca:any, genero: any, idade:any, peso:any){
             let error = '';
-            if (typeof nome !== 'string' || typeof especie !== 'string' || typeof raca !== 'string' || typeof genero !== 'string' || typeof idade !== 'number' || typeof peso !== 'number'){
+            if (typeof idResponsavel !== 'number' || typeof nome !== 'string' || typeof especie !== 'string' || typeof raca !== 'string' || typeof genero !== 'string' || typeof idade !== 'number' || typeof peso !== 'number'){
                 error += ("Informações incompletas ou incorretas. ");
             }
             if(error != ''){
